tests/negative/neg_rule4_freed.safe
-- Test: neg_rule4_freed
-- Description: Returning an observed local access value beyond the lender scope.
--   After the local lender exits scope, the returned observe value would dangle.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.4a.p102b:2ed757bd
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.4a.p102b-diag:ddab22c8
-- Expected: REJECT lifetime_violation

package freed_test

   subtype data is integer (0 to 100)

   function borrow_from_local returns not null access data
      local : data = 42
      return local.access  -- ERROR: observe value cannot outlive local lender

